; ModuleID = '/home/carl/AnghaBench/linux/drivers/power/supply/extr_ab8500_fg.c_ab8505_powercut_restart_read.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/power/supply/extr_ab8500_fg.c_ab8505_powercut_restart_read.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.device = type { i32 }
%struct.device_attribute = type { i32 }
%struct.power_supply = type { i32 }
%struct.ab8500_fg = type { i32 }

@AB8500_RTC = common dso_local global i32 0, align 4
@AB8505_RTC_PCUT_RESTART_REG = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [44 x i8] c"Failed to read AB8505_RTC_PCUT_RESTART_REG\0A\00", align 1
@PAGE_SIZE = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [4 x i8] c"%d\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.device*, %struct.device_attribute*, i8*)* @ab8505_powercut_restart_read to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ab8505_powercut_restart_read(%struct.device* %0, %struct.device_attribute* %1, i8* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.device*, align 8
  %6 = alloca %struct.device_attribute*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca %struct.power_supply*, align 8
  %11 = alloca %struct.ab8500_fg*, align 8
  store %struct.device* %0, %struct.device** %5, align 8
  store %struct.device_attribute* %1, %struct.device_attribute** %6, align 8
  store i8* %2, i8** %7, align 8
  %12 = load %struct.device*, %struct.device** %5, align 8
  %13 = call %struct.power_supply* @dev_get_drvdata(%struct.device* %12)
  store %struct.power_supply* %13, %struct.power_supply** %10, align 8
  %14 = load %struct.power_supply*, %struct.power_supply** %10, align 8
  %15 = call %struct.ab8500_fg* @power_supply_get_drvdata(%struct.power_supply* %14)
  store %struct.ab8500_fg* %15, %struct.ab8500_fg** %11, align 8
  %16 = load %struct.ab8500_fg*, %struct.ab8500_fg** %11, align 8
  %17 = getelementptr inbounds %struct.ab8500_fg, %struct.ab8500_fg* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  %19 = load i32, i32* @AB8500_RTC, align 4
  %20 = load i32, i32* @AB8505_RTC_PCUT_RESTART_REG, align 4
  %21 = call i32 @abx500_get_register_interruptible(i32 %18, i32 %19, i32 %20, i32* %9)
  store i32 %21, i32* %8, align 4
  %22 = load i32, i32* %8, align 4
  %23 = icmp slt i32 %22, 0
  br i1 %23, label %24, label %27

24:                                               ; preds = %3
  %25 = load %struct.device*, %struct.device** %5, align 8
  %26 = call i32 @dev_err(%struct.device* %25, i8* getelementptr inbounds ([44 x i8], [44 x i8]* @.str, i64 0, i64 0))
  br label %33

27:                                               ; preds = %3
  %28 = load i8*, i8** %7, align 8
  %29 = load i32, i32* @PAGE_SIZE, align 4
  %30 = load i32, i32* %9, align 4
  %31 = and i32 %30, 15
  %32 = call i32 @scnprintf(i8* %28, i32 %29, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.1, i64 0, i64 0), i32 %31)
  store i32 %32, i32* %4, align 4
  br label %35

33:                                               ; preds = %24
  %34 = load i32, i32* %8, align 4
  store i32 %34, i32* %4, align 4
  br label %35

35:                                               ; preds = %33, %27
  %36 = load i32, i32* %4, align 4
  ret i32 %36
}

declare dso_local %struct.power_supply* @dev_get_drvdata(%struct.device*) #1

declare dso_local %struct.ab8500_fg* @power_supply_get_drvdata(%struct.power_supply*) #1

declare dso_local i32 @abx500_get_register_interruptible(i32, i32, i32, i32*) #1

declare dso_local i32 @dev_err(%struct.device*, i8*) #1

declare dso_local i32 @scnprintf(i8*, i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
